# MicroSeq

./: --version.cap.contigs  .gitignore  CHANGELOG.MD  README.MD  another_script.py  clean_fasta.py  compare_to_taxfile.py  config.yaml  copy_qt_lgpl.py  external_tools.py  file clean_fasta.py  gg2.blast.results.tsv  gg2.hits.tsv  gg2.tax.tsv  hello_microseq_argparse.py  hello_world.py  importing_future_annotations.py  install_macos_microseq.sh  microseq.sh  microseq_copy.sh  microseq_src_20250507.txt  microseq_src_20250514.txt  my_module.py  ncbi.blast.results.tsv  ncbi.hits.tsv  ncbi.tax.tsv  pyproject.toml  show_code.sh  silva.blast.results.tsv  silva.hits.tsv  silva.tax.title_vs_taxfile.tsv  silva.tax.tsv  silva.tax.with.species.tsv  silva.tsv  structure.txt  tiny.fasta  utils.py
LICENSES/: MIT.txt  VSEARCH_GPLv3.txt
config/: config.yaml  environment-nocap.yml  environment.yml  primer_catalog.yaml
docs/: _config.yml  cli_workflow_tutorial.md  design_algorithm_choices.md  gui_color_legend.md  gui_reference_table.md  gui_usage.md  index.md  microseq_design_questions.md  output_artifacts.md  paired_assembly.md  scientific_references.md  testing.md  vsearch_filters.md  workflow_resolution.md
logs/: microseq.log.1  microseq.log.20250505-102122  microseq.log.20250505-102128  microseq.log.20250505-102130  microseq.log.20250505-102632  microseq.log.20250505-102634  microseq.log.20250505-102636  microseq.log.20250506-125603  microseq.log.20250506-135353  microseq.log.20250506-135758  microseq.log.20250506-135802  microseq.log.20250506-135803  microseq.log.20250506-135804  microseq.log.20250506-135833  microseq.log.20250506-135835  microseq.log.20250506-135905  microseq.log.20250506-140224  microseq.log.20250506-140226  microseq.log.20250506-140227  microseq.log.20250506-140228  microseq.log.20250506-140257  microseq.log.20250506-140259  microseq.log.20250506-142834  microseq.log.20250506-142836  microseq.log.20250506-142837  microseq.log.20250506-142838  microseq.log.20250506-142907  microseq.log.20250506-142909  microseq.log.20250506-142938  microseq.log.20250506-182907  microseq.log.20250506-182908  microseq.log.20250506-182909  microseq.log.20250506-182930  microseq.log.20250506-182931  microseq.log.20250506-182952  microseq.log.20250506-194126  microseq.log.20250506-194127  microseq.log.20250506-194128  microseq.log.20250506-194129  microseq.log.20250506-194149  (+93 more)
run_ab1_demo/: raw_ab1
tests/: README.MD  (+41 more)
(+3077 files in other folders)
