[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "microseq"
version = "1.0"
description= "MicroSeq sandbox package" 
readme= "README.MD"
license= { text = "MIT" } 
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6",
  "biopython>=1.8",
  "PySide6",
  "tqdm", 
  ]

[tool.setuptools]
package-dir = {"" = "src"}     # tells setuptools hey my code lives here in src/ 
license-files = [ 
   "LICENSE/*"] 

[tool.setuptools.packages.find]
where = ["src"]    # find all packages unders src/

[project.entry-points."microseq.aligners"]
blastn = "microseq_tests.aligners.blast:BlastAligner"
vsearch = "microseq_tests.aligners.vsearch:VsearchAligner" 



[project.scripts]
microseq = "microseq_tests.microseq:main"
microseq-setup = "microseq_tests.utility.fetch_dbs:main"
microseq-fix-tsv = "microseq_tests.utility.io_utils:cli"
microseq-gui = "microseq_tests.gui.__main__:launch"
microseq-recommend-threads = "microseq_tests.hardware:recommend_threads_cli"



